@startuml subscription-database-diagram
title QualiTrack - Subscription Database Diagram

skinparam linetype ortho
skinparam packageStyle rectangle
hide circle

entity "subscription_plans" as subscription_plans {
  * id : BIGINT <<PK>>
  --
  * created_at : DATETIME
  * updated_at : DATETIME
  * code : VARCHAR(50)
  * name : VARCHAR(100)
  description : VARCHAR(500)
  * amount : DECIMAL(10,2)
  * currency : VARCHAR(3)
  * billing_cycle : VARCHAR(50)
  stripe_price_id : VARCHAR(150)
  * max_users : INT
  * max_equipment : INT
  * active : BOOLEAN
  --
  <<UK>> code, billing_cycle
  <<UK>> stripe_price_id
}

entity "subscriptions" as subscriptions {
  * id : BIGINT <<PK>>
  --
  * created_at : DATETIME
  * updated_at : DATETIME
  * user_id : BIGINT
  * laboratory_id : BIGINT
  * plan_code : VARCHAR(50)
  * billing_cycle : VARCHAR(50)
  * status : VARCHAR(50)
  stripe_customer_id : VARCHAR(150)
  stripe_subscription_id : VARCHAR(150)
  stripe_checkout_session_id : VARCHAR(150)
  current_period_start : VARCHAR(50)
  current_period_end : VARCHAR(50)
  cancelled_at : VARCHAR(50)
  cancelled_by : BIGINT
  --
  <<UK>> stripe_subscription_id
  <<UK>> stripe_checkout_session_id
}

entity "subscription_payments" as subscription_payments {
  * id : BIGINT <<PK>>
  --
  * created_at : DATETIME
  * updated_at : DATETIME
  * subscription_id : BIGINT
  * provider : VARCHAR(50)
  provider_payment_id : VARCHAR(150)
  stripe_checkout_session_id : VARCHAR(150)
  * amount : DECIMAL(10,2)
  * currency : VARCHAR(3)
  * status : VARCHAR(50)
  paid_at : VARCHAR(50)
  --
  <<UK>> provider_payment_id
  <<UK>> stripe_checkout_session_id
}

subscription_plans ||..o{ subscriptions : "code + billing_cycle"
subscriptions ||--o{ subscription_payments : "subscription_id"

@enduml